[package]
name = "geodate"
description = "Geodate computes geocentric expressions of points in time using a natural lunisolar calendar with metric time based on decimal fractions of the mean solar day."
version = "0.2.1"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/geodate"
homepage = "https://vinc.cc/projects/geodate.html"
license = "MIT"

[lib]
name = "geodate"
path = "src/lib.rs"

[[bin]]
name = "geodate"
path = "src/main.rs"
doc = false

[dependencies]
time = "0.1"
lazy_static = "0.2"
