[package]
name = "geodate"
description = """
Geodate computes geocentric expressions of points in time using a natural
lunisolar calendar with metric time based on decimal fractions of the mean
solar day.
"""
version = "0.3.0"
license = "MIT"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/geodate"
homepage = "https://geodate.org"
readme = "README.md"

[lib]
name = "geodate"
path = "src/lib.rs"

[[bin]]
name = "geodate"
path = "src/main.rs"
doc = false

[dependencies]
getopts = "0.2"
lazy_static = "1.0"
time = "0.1"
