[package]
name = "geodate"
description = """
Geodate computes geocentric expressions of points in time using a natural
lunisolar calendar with metric time based on decimal fractions of the mean
solar day.
"""
version = "0.4.0"
license = "MIT"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/geodate"
homepage = "https://geodate.org"
readme = "README.md"

[lib]
name = "geodate"
path = "src/lib.rs"

[[bin]]
name = "geodate"
path = "src/main.rs"
doc = false

[features]
std = []
bin = ["getopts"]
#libm = ["num-traits/libm"]
default = ["bin", "std"]

[dependencies]
getopts = { version = "0.2", optional = true }
#num-traits = { version = "0.2.14", optional = true, default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

[dev-dependencies]
time = { version = "0.3", features = ["parsing"] }
